--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   font-size: 16px;
   line-height: 1.6;
   color: #333;
   margin: 0;
   padding: 0; }
+  body p {
+    color: gray; }
 
 /*
 section {
@@ -17,12 +19,12 @@ section {
 }
 */
 header {
-  background: #f8f9fa;
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000; }
+  z-index: 1000;
+  background: #f8f9fa;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1); }
   header .container {
     max-width: 1220px;
     margin: 0 auto;
@@ -64,25 +66,25 @@ header {
       margin: 0;
       padding: 0; }
       header .nav-menu ul li {
-        margin: 0 2rem;
-        text-align: center;
-        padding-top: 0.5rem; }
+        margin: 0 1rem;
+        text-align: right;
+        padding-top: 0.5rem;
+        font-size: 0.9rem; }
         header .nav-menu ul li a {
           text-decoration: none;
-          color: #333;
-          font-weight: bold; }
+          color: #666666; }
           header .nav-menu ul li a:hover {
             color: #007bff; }
     header .nav-menu button {
       background: #007bff;
       color: #fff;
       border: none;
-      font-size: 1.2rem;
+      font-size: 0.9rem;
       border-radius: 45px;
       cursor: pointer;
       transition: background 0.3s ease;
-      width: 175px;
-      height: 45px; }
+      width: 130px;
+      height: 35px; }
       header .nav-menu button:hover {
         background: #0062cc; }
   @media (max-width: 1024px) {
@@ -96,12 +98,17 @@ header {
       right: 0;
       background: #f8f9fa;
       width: 100%;
-      padding: 0;
-      padding-bottom: 1rem; }
+      padding: 0; }
       header .nav-menu ul {
         flex-direction: column; }
         header .nav-menu ul li {
-          margin: 0.5rem 0; }
+          padding: 0;
+          margin: 0.5rem 0;
+          text-align: center; }
+      header .nav-menu button {
+        margin-bottom: 1rem; }
+      header .nav-menu.active {
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
     header .nav-menu.active {
       display: flex; } }
 
@@ -110,59 +117,104 @@ main {
 
 .hero {
   text-align: center;
-  padding: 2rem 2rem;
+  padding: 3rem 15px;
   background: #f0eeee;
-  color: #333;
-  margin-top: -1rem; }
+  color: #333; }
   .hero .hero-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     max-width: 1220px;
     margin: 0 auto;
     flex-wrap: wrap;
     gap: 2rem; }
+    @media (max-width: 768px) {
+      .hero .hero-container {
+        flex-direction: column;
+        gap: 1rem; } }
     .hero .hero-container .hero-text {
       flex: 1 1 50%;
-      text-align: center; }
+      text-align: center;
+      margin-top: 10rem; }
+      @media (max-width: 936px) {
+        .hero .hero-container .hero-text {
+          margin-top: 0; } }
       .hero .hero-container .hero-text h1 {
-        font-size: 1.3rem;
-        margin-bottom: 1rem; }
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+        margin-top: 0;
+        line-height: 1.4; }
+        @media (max-width: 320px) {
+          .hero .hero-container .hero-text h1 {
+            font-size: 20px; } }
       .hero .hero-container .hero-text p {
-        font-size: 1.2rem;
-        margin-bottom: 2rem; }
+        font-size: 1rem;
+        margin-bottom: 2rem;
+        line-height: 1.6;
+        padding: 0 7rem; }
+        @media (max-width: 936px) {
+          .hero .hero-container .hero-text p {
+            padding: 0; } }
+        @media (max-width: 320px) {
+          .hero .hero-container .hero-text p {
+            font-size: 16px;
+            padding: 0; } }
+        @media (max-width: 530px) {
+          .hero .hero-container .hero-text p {
+            font-size: 16px;
+            padding: 0; } }
     .hero .hero-container .hero-form {
       flex: 1 1 50%;
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      max-width: 400px;
-      margin: auto; }
-      .hero .hero-container .hero-form p {
-        text-align: left;
-        margin-top: 0;
-        margin-bottom: 0; }
+      max-width: 500px; }
+      @media (max-width: 1200px) {
+        .hero .hero-container .hero-form {
+          margin: auto; } }
+      .hero .hero-container .hero-form .input-placeholder {
+        height: 10px;
+        width: height;
+        margin-left: 5px; }
       .hero .hero-container .hero-form h2 {
         text-align: left;
-        font-size: 1.2rem;
-        margin-top: 0;
-        margin-bottom: 0; }
+        font-size: 1.5rem;
+        margin: 0; }
+        @media (max-width: 320px) {
+          .hero .hero-container .hero-form h2 {
+            font-size: 19px; } }
       .hero .hero-container .hero-form .input-wrapper {
-        position: relative;
-        margin-bottom: 0;
-        width: 100%; }
+        position: flex;
+        margin-bottom: 0; }
+        @media (max-width: 1300px) {
+          .hero .hero-container .hero-form .input-wrapper {
+            padding-right: 2rem; } }
         .hero .hero-container .hero-form .input-wrapper input {
           width: 100%;
           padding: 0.8rem;
           border: 1px solid #999999;
           border-radius: 5px;
-          font-size: 1rem;
-          box-sizing: border-box; }
+          font-size: 1rem; }
           .hero .hero-container .hero-form .input-wrapper input::placeholder {
             color: gray; }
-      .hero .hero-container .hero-form .input-placeholder {
-        width: 10px;
-        height: 10px; }
+      .hero .hero-container .hero-form p {
+        text-align: left;
+        font-size: 0.8rem;
+        margin: 0; }
+        .hero .hero-container .hero-form p label {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem; }
+          .hero .hero-container .hero-form p label input {
+            font-size: 16px; }
+          .hero .hero-container .hero-form p label a {
+            color: #007bff;
+            text-decoration: none; }
+            .hero .hero-container .hero-form p label a:hover {
+              color: #0062cc; }
+          @media (max-width: 410px) {
+            .hero .hero-container .hero-form p label {
+              flex-wrap: wrap; } }
       .hero .hero-container .hero-form button {
         background: #007bff;
         color: #fff;
@@ -172,11 +224,8 @@ main {
         border-radius: 45px;
         cursor: pointer;
         transition: background 0.3s ease;
-        width: 75%;
+        width: 100%;
         margin: 0 auto; }
-        @media (max-width: 768px) {
-          .hero .hero-container .hero-form button {
-            width: 100%; } }
         .hero .hero-container .hero-form button:hover {
           background: #0062cc; }
 
@@ -198,6 +247,10 @@ main {
       align-items: center;
       justify-content: center;
       padding: 0; }
+      @media (max-width: 768px) {
+        .course .swiper .swiper-slide {
+          flex-direction: column;
+          text-align: center; } }
       .course .swiper .swiper-slide img {
         max-width: 100px;
         margin-bottom: 1rem; }
@@ -216,20 +269,19 @@ main {
           margin: 0.5rem auto 1rem; }
       .course .swiper .swiper-slide p {
         font-size: 1rem;
-        color: #333;
         line-height: 1.5;
-        margin-bottom: 0.5rem; }
+        margin-top: 0;
+        margin-bottom: 2rem; }
     .course .swiper .swiper-pagination {
       position: relative;
       margin-top: 0;
       z-index: 10; }
+      .course .swiper .swiper-pagination .swiper-pagination-bullet {
+        background: #9c9c9c;
+        width: 10px;
+        height: 10px; }
 
 .stats {
-  /*display: flex;
-  justify-content: space-around;
-  background: $primary-color;
-  color: $footer-text;
-  padding: 2rem 1rem;*/
   justify-content: space-around;
   color: #fff;
   background: #007bff;
@@ -245,6 +297,11 @@ main {
     margin-bottom: 120px;
     display: flex;
     margin: 2rem 2rem; }
+    @media (max-width: 768px) {
+      .stats .stats-conteiner {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem; } }
   .stats img {
     width: 120px;
     height: 80px;
@@ -259,7 +316,12 @@ main {
       margin-bottom: 0; }
     .stats .stat p {
       font-size: 1rem;
-      margin-top: 0; }
+      margin-top: 0;
+      color: #fff; }
+      @media (max-width: 396px) {
+        .stats .stat p {
+          font-size: 0.8rem;
+          line-height: 1.4; } }
   @media (max-width: 768px) {
     .stats .stats-conteiner {
       display: grid;
@@ -278,9 +340,8 @@ main {
     margin: 15px 15px; }
   .testimonials p {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 8rem;
     margin-top: -5px;
-    color: #333;
     margin-left: 20px;
     margin-right: 20px; }
   .testimonials .swiper {
@@ -302,6 +363,10 @@ main {
         line-height: 1.6;
         margin-bottom: 1rem;
         color: #333; }
+        .testimonials .swiper .swiper-slide blockquote p {
+          margin: 0;
+          padding: 0 1rem;
+          text-align: center; }
         .testimonials .swiper .swiper-slide blockquote i {
           font-size: 2rem;
           color: #007bff; }
@@ -309,20 +374,24 @@ main {
           position: absolute;
           top: -5px;
           left: -40px;
-          margin-left: 20px; }
+          margin-left: 20px;
+          color: #9c9c9c; }
         .testimonials .swiper .swiper-slide blockquote .fa-quote-right {
           position: absolute;
-          bottom: 35px;
+          bottom: 0;
           right: -40px;
-          margin-right: 20px; }
+          margin-right: 20px;
+          color: #9c9c9c; }
       .testimonials .swiper .swiper-slide cite {
         font-size: 1rem;
         font-weight: bold;
         color: #333;
         display: block;
         margin-top: 1rem; }
-    .testimonials .swiper .swiper-pagination {
-      margin-top: 1rem; }
+    .testimonials .swiper .swiper-pagination .swiper-pagination-bullet {
+      background: #9c9c9c;
+      width: 10px;
+      height: 10px; }
   @media (max-width: 768px) {
     .testimonials .swiper-slide {
       padding: 1.5rem; } }
@@ -334,23 +403,30 @@ main {
 
 .video {
   text-align: center;
-  padding: 3rem 2rem;
+  padding: 3rem 15px;
   background-color: #f0eeee; }
+  .video .video-container {
+    max-width: 1220px;
+    margin: auto auto; }
   .video iframe {
-    max-width: 100%;
+    width: 75%;
     height: auto;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 1020px;
-    height: auto; }
+    aspect-ratio: 560 / 315; }
+    @media (max-width: 810px) {
+      .video iframe {
+        width: 100%; } }
 
 .mentors {
   margin: 2rem 0; }
   .mentors h2 {
     text-align: center;
     font-size: 2rem;
+    font-weight: 500;
     margin-bottom: 1.5rem;
     color: #333; }
+  .mentors .swiper {
+    max-width: 1220px;
+    margin: auto auto; }
   .mentors .swiper-slide {
     display: flex;
     flex-direction: column;
@@ -358,26 +434,47 @@ main {
     text-align: center;
     gap: 1rem;
     padding: 0; }
-    .mentors .swiper-slide .mentor-photo img {
-      max-width: 150px;
-      height: auto;
-      border-radius: 50%; }
-    .mentors .swiper-slide .mentor-info h3 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-      color: #007bff; }
-    .mentors .swiper-slide .mentor-info p {
-      font-size: 1rem;
-      color: #333;
-      line-height: 1.5;
-      padding-right: 15px; }
+    .mentors .swiper-slide .mentor-photo {
+      padding-left: 7rem;
+      padding-bottom: 2rem; }
       @media (max-width: 1024px) {
-        .mentors .swiper-slide .mentor-info p {
-          padding-left: 15px; } }
+        .mentors .swiper-slide .mentor-photo {
+          padding-left: 0;
+          padding-bottom: 0; } }
+      .mentors .swiper-slide .mentor-photo img {
+        width: 300px;
+        height: auto; }
+        @media (max-width: 500px) {
+          .mentors .swiper-slide .mentor-photo img {
+            width: 175px;
+            height: auto; } }
+    .mentors .swiper-slide .mentor-info {
+      margin-left: 3rem; }
+      @media (max-width: 1024px) {
+        .mentors .swiper-slide .mentor-info {
+          margin-left: 0; } }
+      .mentors .swiper-slide .mentor-info h3 {
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-bottom: 2rem;
+        margin-top: 0;
+        color: #007bff; }
+      .mentors .swiper-slide .mentor-info p {
+        font-size: 1rem;
+        font-weight: 100;
+        line-height: 1.5;
+        padding-right: 15px; }
+        @media (max-width: 1024px) {
+          .mentors .swiper-slide .mentor-info p {
+            padding-left: 15px; } }
   .mentors .swiper-pagination {
     position: relative;
     margin-top: 0;
     z-index: 10; }
+    .mentors .swiper-pagination .swiper-pagination-bullet {
+      background: #9c9c9c;
+      width: 10px;
+      height: 10px; }
   @media (min-width: 1024px) {
     .mentors .swiper-slide {
       flex-direction: row;
@@ -433,6 +530,10 @@ main {
       max-width: 195px;
       margin: 0 auto;
       transition: color 0.3s ease; }
+      @media (max-width: 320px) {
+        .prefooter .prefooter-item p {
+          font-size: 0.9rem;
+          text-transform: none; } }
       .prefooter .prefooter-item p a {
         color: #f8f9fa;
         transition: color 0.3s ease; }
@@ -451,6 +552,19 @@ footer {
   color: #fff;
   text-align: center;
   padding: 2rem 1rem; }
+  footer .copy {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: 100; }
+    footer .copy:hover {
+      color: #0062cc; }
+  footer .copy_1 {
+    color: #666666;
+    text-decoration: none; }
+    footer .copy_1:hover {
+      color: #0062cc; }
+  footer a {
+    font-size: 0.9rem; }
   footer .contact-info {
     display: flex;
     justify-content: space-around;
@@ -476,26 +590,8 @@ footer {
   margin: 0 auto;
   padding: 0 15px;
   box-sizing: border-box; }
-
-@media (max-width: 320px) {
-  .burger-menu {
-    display: flex; }
-
-  .nav-menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background: #f8f9fa;
-    width: 100%;
-    padding-right: -16px; }
-    .nav-menu ul {
-      flex-direction: column; }
-      .nav-menu ul li {
-        margin: 0.5rem 0; }
-
-  .nav-menu.active {
-    display: flex; } }
+  @media (max-width: 1220px) {
+    .container {
+      padding: 0 15px; } }
 
 /*# sourceMappingURL=main.css.map */
