--- a/main.scss
+++ b/main.scss
@@ -286,8 +286,9 @@ main {
 
       p {
         text-align: left;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         margin: 0;
+        color: $text-color;
 
         label {
           display: flex;
