--- a/main.css
+++ b/main.css
@@ -87,6 +87,9 @@ header {
       height: 35px; }
       header .nav-menu button:hover {
         background: #0062cc; }
+      header .nav-menu button a {
+        text-decoration: none;
+        color: #fff; }
   @media (max-width: 1024px) {
     header .burger-menu {
       display: flex; }
